--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,4 +1,11 @@
-FROM python:3.8-slim
-COPY requirements.txt .
-RUN pip install --user -r requirements.txt
+FROM python:3.9-slim
+
 WORKDIR /code
+
+COPY ./requirements.txt /code/requirements.txt
+
+RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
+
+EXPOSE 8000
+
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
