--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -5,3 +5,6 @@ psycopg2-binary==2.9.1
 requests==2.26.0
 urllib3==1.26.6
 python-pptx==0.6.19
+fastapi==0.75.2
+uvicorn==0.15.0
+azure-functions==1.10.1
